--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "require": {
         "php": ">=7.0.0",
-        "manzoli2122/salao-atendimento": "1.*"
+        "manzoli2122/salao-atendimento": "0.0.9"
     },
     
     "autoload": {
@@ -27,7 +27,6 @@
             ]
             
         }
-    },
-    
-    "minimum-stability": "dev"
+    }
+   
 }
