--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "require": {
         "php": ">=7.0.0",
-        "manzoli2122/salao-atendimento": "dev-master"
+        "manzoli2122/salao-atendimento": "2.0.0"
     },
     
     "autoload": {
